--- a/class_6.html
+++ b/class_6.html
@@ -56,6 +56,8 @@
     function Go_timesheet(){
         window.location.replace("timesheet_6.html" + "?" + "id" + "=" + getParam("id") + "&" + "pw" + "=" + getParam("pw"));
     }
+
+    
 </script>
 
 <body>
@@ -452,4 +454,45 @@
 
 <script language="JavaScript1.2">
     top.document.title = '[ZL] 6반'
+  </script>
+
+<script>
+    (function() {
+      var w = window;
+      if (w.ChannelIO) {
+        return (window.console.error || window.console.log || function(){})('ChannelIO script included twice.');
+      }
+      var ch = function() {
+        ch.c(arguments);
+      };
+      ch.q = [];
+      ch.c = function(args) {
+        ch.q.push(args);
+      };
+      w.ChannelIO = ch;
+      function l() {
+        if (w.ChannelIOInitialized) {
+          return;
+        }
+        w.ChannelIOInitialized = true;
+        var s = document.createElement('script');
+        s.type = 'text/javascript';
+        s.async = true;
+        s.src = 'https://cdn.channel.io/plugin/ch-plugin-web.js';
+        s.charset = 'UTF-8';
+        var x = document.getElementsByTagName('script')[0];
+        x.parentNode.insertBefore(s, x);
+      }
+      if (document.readyState === 'complete') {
+        l();
+      } else if (window.attachEvent) {
+        window.attachEvent('onload', l);
+      } else {
+        window.addEventListener('DOMContentLoaded', l, false);
+        window.addEventListener('load', l, false);
+      }
+    })();
+    ChannelIO('boot', {
+      "pluginKey": "8f91054f-bfb9-4b42-99c4-560191d3763b"
+    });
   </script>
