--- a/timesheet_2.html
+++ b/timesheet_2.html
@@ -127,7 +127,7 @@
     </div>
 
     <div id="notice">
-        <a style="text-align: center;">2반 시간표를 제대로 제공받지 못하여 변경된 시간표와 다를수 <br>있으니, 오류가 있는 경우 하단의 채널톡으로 제보 바랍니다.</a>
+        <a style="text-align: center;"></a>
     </div>
 
     <table id="sheet1">
@@ -148,8 +148,8 @@
             <td><br><b>진로</b><br>전호영<br>　</td>
             <td><br><b>수학</b><br>김재영<br>　</td>
             <td><br><b>과학</b><br>김종수<br>　</td>
-            <td><br><b>애니메이션</b><br>정희범<br>　</td>
             <td><br><b>상경</b><br>김준식<br>　</td>
+            <td><br><b>음악</b><br>이택주<br>　</td>
         </tr>
 
         <tr>
@@ -157,7 +157,7 @@
             <td><br><b>상경</b><br>김준식<br>　</td>
             <td><br><b>음악</b><br>이택주<br>　</td>
             <td><br><b>사회</b><br>이민주<br>　</td>
-            <td><br><b>애니메이션</b><br>정희범<br>　</td>
+            <td><br><b>영어</b><br>양재덕<br>　</td>
             <td><br><b>영어</b><br>양재덕<br>　</td>
         </tr>
 
@@ -166,8 +166,8 @@
             <td><br><b>사회</b><br>이민주<br>　</td>
             <td><br><b>영어</b><br>양재덕<br>　</td>
             <td><br><b>애니메이션</b><br>정희범<br>　</td>
-            <td><br><b>수학</b><br>김재영<br>　</td>
-            <td><br><b>수학</b><br>김재영<br>　</td>
+            <td><br><b>국어</b><br>허관무<br>　</td>
+            <td><br><b>애니메이션</b><br>정희범<br>　</td>
         </tr>
 
         <tr>
@@ -175,8 +175,8 @@
             <td><br><b>체육</b><br>김성열<br>　</td>
             <td><br><b>상경</b><br>김준식<br>　</td>
             <td><br><b>애니메이션</b><br>정희범<br>　</td>
-            <td><br><b>과학</b><br>김종수<br>　</td>
-            <td><br><b>음악</b><br>이택주<br>　</td>
+            <td><br><b>국어</b><br>허관무<br>　</td>
+            <td><br><b>정희범</b><br>정희범<br>　</td>
         </tr>
 
         <tr>
@@ -190,10 +190,10 @@
 
         <tr>
             <td id="left">6교시</td>
-            <td><br><b>국어</b><br>허관무<br>　</td>
+            <td><br><b>수학</b><br>김재영<br>　</td>
             <td><br><b>한국사</b><br>박경수<br>　</td>
             <td><br><b>CA</b><br><br></td>
-            <td><br><b>영어</b><br>양재덕<br>　</td>
+            <td><br><b>수학</b><br>김재영<br>　</td>
             <td><br><b>국어</b><br>허관무<br>　</td>
         </tr>
 
@@ -456,7 +456,7 @@
 
 
 <script language="JavaScript1.2">
-    top.document.title = '[ZL] MAIN'
+    top.document.title = '[ZL] timesheet'
   </script>
 
 <script>
