--- a/timesheet_3.html
+++ b/timesheet_3.html
@@ -445,7 +445,7 @@
 
 
 <script language="JavaScript1.2">
-    top.document.title = '[ZL] MAIN'
+    top.document.title = '[ZL] timesheet'
   </script>
 
 <script>
