--- a/timesheet_2.html
+++ b/timesheet_2.html
@@ -166,7 +166,7 @@
             <td><br><b>사회</b><br>이민주<br>　</td>
             <td><br><b>영어</b><br>양재덕<br>　</td>
             <td><br><b>애니메이션</b><br>정희범<br>　</td>
-            <td><br><b>국어</b><br>허관무<br>　</td>
+            <td><br><b>과학</b><br>김종수<br>　</td>
             <td><br><b>애니메이션</b><br>정희범<br>　</td>
         </tr>
 
@@ -176,7 +176,7 @@
             <td><br><b>상경</b><br>김준식<br>　</td>
             <td><br><b>애니메이션</b><br>정희범<br>　</td>
             <td><br><b>국어</b><br>허관무<br>　</td>
-            <td><br><b>정희범</b><br>정희범<br>　</td>
+            <td><br><b>애니메이션</b><br>정희범<br>　</td>
         </tr>
 
         <tr>
