--- a/class_2.html
+++ b/class_2.html
@@ -149,7 +149,7 @@
                 '7교시': '창체',
                 
             },
-            화요일: {
+            화요일: {/*
                 '0교시': '아침조회',
                 '1교시': '수학',
                 '2교시': '음악',
@@ -157,18 +157,7 @@
                 '4교시': '상경',
                 '5교시': '사회',
                 '6교시': '한국사',
-                '7교시': '국어',
-            },
-            수요일: {
-                '0교시': '아침조회',
-                '1교시': '과학',
-                '2교시': '사회',
-                '3교시': '애니메이션',
-                '4교시': '애니메이션',
-                '5교시': '체육',
-                '6교시': '동아리'
-            },
-            목요일: {
+                '7교시': '국어',*/
                 '0교시': '아침조회',
                 '1교시': '상경',
                 '2교시': '영어',
@@ -178,7 +167,43 @@
                 '6교시': '수학',
                 '7교시': '한국사',
             },
-            금요일: {
+            수요일: {
+                /*'0교시': '아침조회',
+                '1교시': '과학',
+                '2교시': '사회',
+                '3교시': '애니메이션',
+                '4교시': '애니메이션',
+                '5교시': '체육',
+                '6교시': '동아리'*/
+                '0교시': '아침조회',
+                '1교시': '과학',
+                '2교시': '국어',
+                '3교시': '한국사',
+                '4교시': '===',
+                '5교시': '오늘은 오전수업만 진행합니다.',
+                '6교시': '',
+                '7교시': '',
+
+            },
+            목요일: {
+                /*'0교시': '아침조회',
+                '1교시': '상경',
+                '2교시': '영어',
+                '3교시': '과학',
+                '4교시': '국어',
+                '5교시': '진로',
+                '6교시': '수학',
+                '7교시': '한국사',*/
+                '0교시': '오늘은 수능 당일입니다.',
+                '1교시': '',
+                '2교시': '',
+                '3교시': '',
+                '4교시': '',
+                '5교시': '',
+                '6교시': '',
+                '7교시': '',
+            },
+            금요일: {/*
                 '0교시': '아침조회',
                 '1교시': '음악',
                 '2교시': '영어',
@@ -186,7 +211,14 @@
                 '4교시': '애니메이션',
                 '5교시': '과학',
                 '6교시': '국어',
-                '7교시': '한국사',
+                '7교시': '한국사',*/
+                '0교시': '아침조회',
+                '1교시': '과학',
+                '2교시': '사회',
+                '3교시': '애니메이션',
+                '4교시': '애니메이션',
+                '5교시': '체육',
+                '6교시': '동아리'
 
             },
             주말: {
