--- a/class_5.html
+++ b/class_5.html
@@ -148,26 +148,14 @@
                 
             },
             화요일: {
-                '0교시': '아침조회',
+                /*'0교시': '아침조회',
                 '1교시': '국어',
                 '2교시': '영어',
                 '3교시': '컴시',
                 '4교시': '사회',
                 '5교시': '체육',
                 '6교시': '진로',
-                '7교시': '과학',
-            },
-            수요일: {
-                '0교시': '아침조회',
-                '1교시': '국어',
-                '2교시': '사물',
-                '3교시': '사물',
-                '4교시': '사회',
-                '5교시': '음악',
-                '6교시': 'CA',
-                '7교시': ''
-            },
-            목요일: {
+                '7교시': '과학',*/
                 '0교시': '아침조회',
                 '1교시': '수학',
                 '2교시': '컴시',
@@ -177,15 +165,59 @@
                 '6교시': '플밍',
                 '7교시': '플밍',
             },
-            금요일: {
+            수요일: {
+                /*'0교시': '아침조회',
+                '1교시': '국어',
+                '2교시': '사물',
+                '3교시': '사물',
+                '4교시': '사회',
+                '5교시': '음악',
+                '6교시': 'CA',
+                '7교시': ''*/
                 '0교시': '아침조회',
+                '1교시': '컴시',
+                '2교시': '영어',
+                '3교시': '과학',
+                '4교시': '===',
+                '5교시': '오늘은 오전수업만 진행합니다.',
+                '6교시': '',
+                '7교시': '',
+            },
+            목요일: {
+                /*'0교시': '아침조회',
+                '1교시': '수학',
+                '2교시': '컴시',
+                '3교시': '체육',
+                '4교시': '음악',
+                '5교시': '국어',
+                '6교시': '플밍',
+                '7교시': '플밍',*/
+                '0교시': '오늘은 수능 당일입니다.',
+                '1교시': '',
+                '2교시': '',
+                '3교시': '',
+                '4교시': '',
+                '5교시': '',
+                '6교시': '',
+                '7교시': '',
+            },
+            금요일: {
+                /*'0교시': '아침조회',
                 '1교시': '사회',
                 '2교시': '진로',
                 '3교시': '수학',
                 '4교시': '사물',
                 '5교시': '컴시',
                 '6교시': '영어',
-                '7교시': '과학',
+                '7교시': '과학',*/
+                '0교시': '아침조회',
+                '1교시': '국어',
+                '2교시': '사물',
+                '3교시': '사물',
+                '4교시': '사회',
+                '5교시': '음악',
+                '6교시': 'CA',
+                '7교시': ''
 
             },
             주말: {
