--- a/class_6.html
+++ b/class_6.html
@@ -150,25 +150,14 @@
                 
             },
             화요일: {
-                '0교시': '아침조회',
+                /*'0교시': '아침조회',
                 '1교시': '사회',
                 '2교시': '플밍',
                 '3교시': '플밍',
                 '4교시': '컴시',
                 '5교시': '진로',
                 '6교시': '과학',
-                '7교시': '수학',
-            },
-            수요일: {
-                '0교시': '아침조회',
-                '1교시': '진로',
-                '2교시': '컴시',
-                '3교시': '플밍',
-                '4교시': '플밍',
-                '5교시': '수학',
-                '6교시': 'CA'
-            },
-            목요일: {
+                '7교시': '수학',*/
                 '0교시': '아침조회',
                 '1교시': '음악',
                 '2교시': '체육',
@@ -178,15 +167,58 @@
                 '6교시': '사물',
                 '7교시': '영어',
             },
-            금요일: {
+            수요일: {
+                /*'0교시': '아침조회',
+                '1교시': '진로',
+                '2교시': '컴시',
+                '3교시': '플밍',
+                '4교시': '플밍',
+                '5교시': '수학',
+                '6교시': 'CA'*/
                 '0교시': '아침조회',
+                '1교시': '국어',
+                '2교시': '음악',
+                '3교시': '사물',
+                '4교시': '===',
+                '5교시': '오늘은 오전수업만 진행합니다.',
+                '6교시': '',
+                '7교시': '',
+            },
+            목요일: {/*
+                '0교시': '아침조회',
+                '1교시': '음악',
+                '2교시': '체육',
+                '3교시': '국어',
+                '4교시': '사회',
+                '5교시': '사물',
+                '6교시': '사물',
+                '7교시': '영어',*/
+                '0교시': '오늘은 수능 당일입니다.',
+                '1교시': '',
+                '2교시': '',
+                '3교시': '',
+                '4교시': '',
+                '5교시': '',
+                '6교시': '',
+                '7교시': '',
+                
+            },
+            금요일: {
+                /*'0교시': '아침조회',
                 '1교시': '영어',
                 '2교시': '사회',
                 '3교시': '과학',
                 '4교시': '수학',
                 '5교시': '국어',
                 '6교시': '음악',
-                '7교시': '사물',
+                '7교시': '사물',*/
+                '0교시': '아침조회',
+                '1교시': '진로',
+                '2교시': '컴시',
+                '3교시': '플밍',
+                '4교시': '플밍',
+                '5교시': '수학',
+                '6교시': 'CA'
 
             },
             주말: {
