--- a/main.html
+++ b/main.html
@@ -124,7 +124,7 @@
 <!-- 여기부터는 본 페이지 및 시계 -->
     <div class="main">
         <div style="background-color: rgba(235, 121, 15, 0.7); text-align: center; border-radius: 32px; box-shadow: 3px 3px 3px gray;">
-            <a style="color: white; font-family: 'Do Hyeon', sans-serif; font-size: 20px;"><br>1반과 4반 시간표 제공받습니다!<br>(문의 및 오류 제보, 링크 제공 : 우측 하단 "채널톡")<br></a><br>
+            <a style="color: white; font-family: 'Do Hyeon', sans-serif; font-size: 20px;"><br>온라인 주간 시간표 모두 적용완료, (1,4반 X)<br>(문의 및 오류 제보, 링크 제공 : 우측 하단 "채널톡")<br></a><br>
             </div>
             <div class="clock">
                 <body onload="showClock()">
@@ -510,6 +510,7 @@
       ch.q = [];
       ch.c = function(args) {
         ch.q.push(args);
+        
       };
       w.ChannelIO = ch;
       function l() {
