--- a/class_3.html
+++ b/class_3.html
@@ -148,25 +148,14 @@
                 
             },
             화요일: {
-                '0교시': '아침조회',
+               /* '0교시': '아침조회',
                 '1교시': '진로',
                 '2교시': '미술',
                 '3교시': '과학',
                 '4교시': '수학',
                 '5교시': '플밍',
                 '6교시': '플밍',
-                '7교시': '영어',
-            },
-            수요일: {
-                '0교시': '아침조회',
-                '1교시': '사회',
-                '2교시': '영어',
-                '3교시': '과학',
-                '4교시': '컴시',
-                '5교시': '국어',
-                '6교시': '동아리'
-            },
-            목요일: {
+                '7교시': '영어',*/
                 '0교시': '아침조회',
                 '1교시': '국어',
                 '2교시': '사회',
@@ -176,15 +165,57 @@
                 '6교시': '수학',
                 '7교시': '과학',
             },
-            금요일: {
+            수요일: {
+                /*'0교시': '아침조회',
+                '1교시': '사회',
+                '2교시': '영어',
+                '3교시': '과학',
+                '4교시': '컴시',
+                '5교시': '국어',
+                '6교시': '동아리'*/
                 '0교시': '아침조회',
+                '1교시': '플밍',
+                '2교시': '사회',
+                '3교시': '미술',
+                '4교시': '===',
+                '5교시': '오늘은 오전수업만 진행합니다.',
+                '6교시': '',
+                '7교시': '',
+            },
+            목요일: {
+                /*'0교시': '아침조회',
+                '1교시': '국어',
+                '2교시': '사회',
+                '3교시': '컴시',
+                '4교시': '영어',
+                '5교시': '체육',
+                '6교시': '수학',
+                '7교시': '과학',*/
+                '0교시': '오늘은 수능 당일입니다.',
+                '1교시': '',
+                '2교시': '',
+                '3교시': '',
+                '4교시': '',
+                '5교시': '',
+                '6교시': '',
+                '7교시': '',
+            },
+            금요일: {
+                /*'0교시': '아침조회',
                 '1교시': '수학',
                 '2교시': '진로',
                 '3교시': '사물',
                 '4교시': '플밍',
                 '5교시': '플밍',
                 '6교시': '사회',
-                '7교시': '미술',
+                '7교시': '미술',*/
+                '0교시': '아침조회',
+                '1교시': '사회',
+                '2교시': '영어',
+                '3교시': '과학',
+                '4교시': '컴시',
+                '5교시': '국어',
+                '6교시': '동아리',
 
             },
             주말: {
